Making some visual changes to the project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
 
     <string name="app_name">Memory Game</string>
     <string name="debug">regular</string>
+    <string name="information">Information</string>
+    <string name="sound_on">Sound ON</string>
+    <string name="app_info_hint">Adapted from memory-game by sromku for the CSL in Bremen.</string>
 
 </resources>
