--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Preference Strings -->
+    <string name="pref_user">user-selected</string>
+    <string name="pref_new_user">new-user</string>
+    <string name="pref_game_set">game-set</string>
+    <string name="pref_directed_game">pref_guided_game</string>
+    <string name="pref_guided_hint_on">When you press play the game will choose a random order for themes and impairments.</string>
+    <string name="pref_guided_hint_off">The game will let you choose what to play</string>
+    <!-- /Preferences Strings -->
+
     <string name="app_name">Memory Game</string>
     <string name="debug">regular</string>
     <string name="information">Information</string>
@@ -13,11 +22,6 @@
     <string name="new_user_hint">The name must be unique.</string>
     <string name="stage_clear">Stage Clear!</string>
 
-    <!-- Preference Strings -->
-    <string name="pref_user">user-selected</string>
-    <string name="pref_new_user">new-user</string>
-    <string name="pref_game_set">game-set</string>
-    <string name="pref_guided_game">pref_guided_game</string>
-    <string name="pref_guided_hint_on">When you press play the game will choose a random order for themes and impairments.</string>
-    <string name="pref_guided_hint_off">The game will let you choose what to play</string>
+    <string name="number_sum">Numer sum:</string>
+    <string name="please_answer_sum_hint">Please fill out the sum</string>
 </resources>
