--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,20 @@
 <resources>
 
     <!-- Preference Strings -->
-    <string name="pref_user">user-selected</string>
-    <string name="pref_new_user">new-user</string>
-    <string name="pref_game_set">game-set</string>
-    <string name="pref_directed_game">pref_guided_game</string>
-    <string name="pref_guided_hint_on">When you press play the game will choose a random order for themes and impairments.</string>
+    <string name="pref_user" translatable="false">user-selected</string>
+    <string name="pref_new_user" translatable="false">new-user</string>
+    <string name="pref_game_set" translatable="false">game-set</string>
+    <string name="pref_directed_game" translatable="false">pref_guided_game</string>
+    <string name="pref_guided_hint_on" translatable="false">
+        When you press play the game will choose a random order for themes and impairments.
+    </string>
     <string name="pref_guided_hint_off">The game will let you choose what to play</string>
     <!-- /Preferences Strings -->
 
     <string name="app_name">Memory Game</string>
-    <string name="debug">regular</string>
+    <string name="debug" translatable="false">regular</string>
     <string name="information">Information</string>
-    <string name="app_info_hint">Adapted from memory-game by sromku for the CSL in Bremen.</string>
+    <string name="app_info_hint">"Adapted from memory-game by sromku for the CSL in Bremen."</string>
     <string name="sound_off">Sound OFF</string>
     <string name="sound_on">Sound ON</string>
     <string name="more_options">More Options</string>
@@ -26,8 +28,7 @@
     <string name="normal_game">Easy Mode</string>
     <string name="normal_game_description">
         Just a normal game of memory. Flip two cards at a time and if they are a match both will be
-        taken out of the game, you win when there are no cards left at the board.\n\nHave fun!
-    </string>
+        taken out of the game, you win when there are no cards left at the board.\n\nHave fun!"</string>
     <string name="visual_blur_game">Memory Fog</string>
     <string name="visual_blur_game_description">
         A simple game, but what is that? All the cards are blurry. And black and white. Do you best
@@ -52,5 +53,4 @@
     <string name="replay_cheat_on_summary">Every card replays after a failed match.</string>
     <string name="pref_selected_games">pref_selected_games</string>
     <string name="directed_games_empty_hint">For directed mode please select some games</string>
-
 </resources>
